bugfix(app) Stop page jumping on button hover on landing page

--- a/app/assets/stylesheets/common/buttons.sass
+++ b/app/assets/stylesheets/common/buttons.sass
@@ -5,7 +5,6 @@
   text-transform: uppercase
   outline: none !important
   font-size: 12px
-  line-height: 12px
   transition: 0.5s
   padding: 16px
 
